add bootstrap wrappers

--- a/app/views/games/_form_vote.haml
+++ b/app/views/games/_form_vote.haml
@@ -1,4 +1,4 @@
-= simple_form_for @player, :url => player_vote_game_path, :remote => true do |f|
+= simple_form_for @player, :url => player_vote_game_path, :remote => true, :wrapper => :horizontal_form do |f|
   = f.input :complexity, collection: @game.complexity.lookup
   = f.input :amount_of_work, collection: @game.amount_of_work.lookup
   = f.input :unknown_risk, collection: @game.unknown_risk.lookup
