--- a/app/views/games/_form_join.haml
+++ b/app/views/games/_form_join.haml
@@ -1,4 +1,4 @@
-= form_for @player, :url => join_game_path do |f|
+= simple_form_for @player, :url => join_game_path, :wrapper => :horizontal_form do |f|
   .description
     = f.label :name
   = f.text_field :name
