--- a/app/views/unknown_risks/_form.html.haml
+++ b/app/views/unknown_risks/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @unknown_risk do |f|
+= simple_form_for @unknown_risk, :wrapper => :horizontal_form do |f|
   - if @unknown_risk.errors.any?
     #error_explanation
       %h2= "#{pluralize(@unknown_risk.errors.count, "error")} prohibited this unknown_risk from being saved:"
@@ -7,16 +7,12 @@
           %li= message
 
   .field
-    = f.label :none
-    = f.text_field :none
+    = f.input :none
   .field
-    = f.label :low
-    = f.text_field :low
+    = f.input :low
   .field
-    = f.label :some
-    = f.text_field :some
+    = f.input :some
   .field
-    = f.label :many
-    = f.text_field :many
+    = f.input :many
   .actions
     = f.submit 'Save'
