--- a/app/views/games/_players_table.haml
+++ b/app/views/games/_players_table.haml
@@ -13,7 +13,7 @@
       Unknowns / Risks
     %th{:align => :left}
       Total Points
-    %th{:align => :left}
+    %th.table-primary{:align => :left}
       Fibonacci Vote
     %th{:align => :left}
       voted?
@@ -31,7 +31,7 @@
         = show_player_votes ? player.unknown_risk : 'x'
       %td
         = show_player_votes ? player.total_points : 'x'
-      %td
+      %td.table-primary
         = show_player_votes ? player.fibonacci_vote : 'x'
       %td
         = player.voted? ? 'Yes' : 'No'
@@ -49,7 +49,8 @@
         #{as_average(players.sum(:unknown_risk), players.count)}
       %td
         #{as_average(players.sum_total_points, players.count)}
-      %td
+      %td.table-primary
+        #{as_average(players.sum_fibonacci_vote, players.count)}
       %td
 
 - if show_player_votes
@@ -64,23 +65,23 @@
         Player
       %th{:align => :left}
         Points Total
-      %th{:align => :left}
+      %th.table-primary{:align => :left}
         Fibonacci Vote
     %tr
       %td
         Highest
       %td
         #{players.highest_voter.name}
-      %td
+      %td.table-danger
         #{format_number(players.highest_voter.total_points)}
-      %td
+      %td.table-primary
         #{format_number(players.highest_voter.fibonacci_vote)}
     %tr
       %td
         Lowest
       %td
         #{players.lowest_voter.name}
-      %td
+      %td.table-success
         #{format_number(players.lowest_voter.total_points)}
-      %td
+      %td.table-primary
         #{format_number(players.lowest_voter.fibonacci_vote)}
